--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     height: 550px;
     border-radius: 40px;
     position: relative;
-    top: 150px;
+    top: 50px;
     display: flex;
     justify-content: space-around;
 }
@@ -137,40 +137,134 @@ body {
 #box {
     min-width: 300px;
     height: 65px;
-    display: inline-flex;
+    /* display: inline-flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
+    /* display: flex;
+    gap: 4px; */
+    display: flex;
     border-radius: 15px;
     margin: 5px 0px 8px 0px;
 }
 
 .reaction {
    color: hsl(0, 100%, 67%);
+   background-color: hsla(0, 100%, 67%, 0.075);
+}
 
+.reaction > img {
+    margin-left: 30px;
+    width: 23px;
+}
+
+.reaction > h3 {
+    margin-left: 30px;
+    margin-top: 18px;
+}
+
+.reaction > p {
+    color: black;
+    font-weight: 700;
+    margin-left: 80px;
+    margin-top: 21px;
+}
+
+.reaction > p > span {
+    color: #ccc;
 }
 
 .memory{
    color: hsl(39, 100%, 56%);
+   background-color: hsla(39, 100%, 56%, 0.158);
+}
+
+.memory > img {
+    margin-left: 30px;
+    width: 23px;
+}
+
+.memory > h3 {
+    margin-left: 30px;
+    margin-top: 18px;
+}
+
+.memory > p {
+    color: black;
+    font-weight: 700;
+    margin-left: 80px;
+    margin-top: 21px;
+}
+
+.memory > p > span {
+    color: #ccc;
 }
 
 .verbal{
    color: hsl(166, 100%, 37%);
+   background-color: hsla(166, 100%, 37%, 0.089);
+}
+
+.verbal > img{
+    margin-left: 30px;
+    width: 23px;
+}
+
+.verbal > h3 {
+    margin-left: 30px;
+    margin-top: 18px;
+}
+
+.verbal > p{
+    color: black;
+    font-weight: 700;
+    margin-left: 95px;
+    margin-top: 21px;
+}
+
+.verbal > p > span {
+    color: #ccc;
 }
 
 .visual{
    color: hsl(234, 85%, 45%);
+   background-color: hsla(234, 85%, 45%, 0.11);
+}
+
+.visual > img {
+    margin-left: 30px;
+    width: 23px;
+}
+
+.visual > h3 {
+    margin-left: 30px;
+    margin-top: 18px;
+}
+
+.visual > p {
+    color: black;
+    font-weight: 700;
+    margin-left: 100px;
+    margin-top: 21px;
+}
+
+
+.visual > p > span {
+    color: #ccc;
 }
 
 
 
 button {
-    min-width: 300px;
+    min-width: 330px;
     height: 55px;
     border-radius: 30px;
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     color: white;
     border: none;
-
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 30px;
+    margin-left: 25px;
 }
 
 .button {
