--- a/style.css
+++ b/style.css
@@ -8,29 +8,6 @@
     src: url(HankenGrotesk-VariableFont_wght.ttf);
 }
 
-/* ### Primary */
-
-/* - Light red: hsl(0, 100%, 67%)
-- Orangey yellow: hsl(39, 100%, 56%)
-- Green teal: hsl(166, 100%, 37%)
-- Cobalt blue: hsl(234, 85%, 45%) */
-
-/* ## Gradients */
-
-/* - Light slate blue (background): hsl(252, 100%, 67%)
-- Light royal blue (background): hsl(241, 81%, 54%)
-
-- Violet blue (circle): hsla(256, 72%, 46%, 1)
-- Persian blue (circle): hsla(241, 72%, 46%, 0) */
-
-
-
-/* ### Neutral */
-
-/* - White: hsl(0, 0%, 100%)
-- Pale blue: hsl(221, 100%, 96%)
-- Light lavender: hsl(241, 100%, 89%)
-- Dark gray blue: hsl(224, 30%, 27%) */
 
 * {
     margin: 0;
@@ -137,11 +114,6 @@ body {
 #box {
     min-width: 300px;
     height: 65px;
-    /* display: inline-flex;
-    justify-content: space-between;
-    align-items: center; */
-    /* display: flex;
-    gap: 4px; */
     display: flex;
     border-radius: 15px;
     margin: 5px 0px 8px 0px;
@@ -273,3 +245,37 @@ button {
     align-items: center;
     margin: 20px 0px ;
 }
+
+/* Media Query for 375px */
+/* @media screen and (max-width: 375px) {
+    .container {
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+        align-items: stretch;
+        padding: 20px;
+    }
+    
+    .description, .summary {
+        width: 100%;
+        height: auto;
+    }
+    
+    .circle {
+        margin: 20px auto;
+        left: 0;
+        right: 0;
+    }
+    
+    .result {
+        top: 40px;
+    }
+    
+    .box {
+        margin: 10px 0px;
+    }
+    
+    .button {
+        margin: 20px auto;
+    }
+} */
